# serf

./: .codecov.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  coverage.yml  fuzz.yml  loc.yml  net.yml  quinn.yml  s2n.yml.bk
core/: Cargo.toml
core/src/: coalesce.rs  coordinate.rs  error.rs  event.rs  key_manager.rs  lib.rs  snapshot.rs  types.rs
core/src/coalesce/: member.rs  user.rs
core/src/delegate/: composite.rs  transform.rs
core/src/event/: crate_event.rs
core/src/serf/: api.rs  base.rs  delegate.rs  internal_query.rs  query.rs
core/src/serf/base/: tests.rs
core/src/serf/base/tests/: serf.rs
core/src/serf/base/tests/serf/: event.rs  join.rs  leave.rs
core/src/types/: member.rs
examples/toy-consul/: Cargo.toml  README.md
examples/toy-consul/src/: main.rs
examples/toyconsul/: Cargo.toml  README.md
examples/toyconsul/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: messages.rs
ruserf/test/main/net/: num_nodes.rs  role.rs  set_tags.rs  state.rs  update.rs
ruserf/test/main/net/delegate/: nodemeta.rs
ruserf/test/main/net/event/: query_deduplicate.rs  query_old_message.rs  query_size_limit.rs  remove_failed_events_leave.rs
ruserf/test/main/net/join/: intent_reset_leaving.rs  join_leave.rs  join_leave_join.rs  pending_intent.rs
ruserf/test/main/net/leave/: snapshot_recovery.rs
ruserf/test/main/net/reap/: reap.rs
ruserf/test/main/net/snapshot/: snapshoter_force_compact.rs
serf/: Cargo.toml
serf-agent/: Cargo.toml
serf-agent/src/: event_handler.rs  invoke.rs  ipc.rs  lib.rs  mdns.rs  options.rs
serf-agent/src/ipc/: event_stream.rs
serf-agent/src/options/: builder.rs
serf-core/: Cargo.toml
serf-core/src/: broadcast.rs  coalesce.rs  coordinate.rs  delegate.rs  error.rs  event.rs  key_manager.rs  lib.rs  options.rs  serf.rs  snapshot.rs  types.rs
serf-core/src/coalesce/: member.rs  user.rs
serf-core/src/delegate/: composite.rs  merge.rs  reconnect.rs  transform.rs
serf-core/src/event/: crate_event.rs
serf-core/src/serf/: api.rs  base.rs  delegate.rs  internal_query.rs  query.rs
serf-core/src/serf/base/: tests.rs
serf-core/src/serf/base/tests/: serf.rs
serf-core/src/serf/base/tests/serf/: delegate.rs  event.rs  join.rs  leave.rs  reap.rs  reconnect.rs  remove.rs  snapshot.rs
serf-core/src/types/: arbitrary_impl.rs  clock.rs  conflict.rs  coordinate.rs  filter.rs  fuzzy.rs  join.rs  key.rs  leave.rs  member.rs  message.rs  push_pull.rs  query.rs  quickcheck_impl.rs  tags.rs  tests.rs  user_event.rs  version.rs
serf-core/src/types/filter/: tag_filter.rs
serf-core/src/types/query/: response.rs
serf-core/src/types/user_event/: message.rs  user_events.rs
serf-proto/: Cargo.toml
serf-proto/src/: arbitrary_impl.rs  clock.rs  conflict.rs  filter.rs  join.rs  key.rs  leave.rs  lib.rs  member.rs  message.rs  push_pull.rs  query.rs  tags.rs  user_event.rs  version.rs
serf-proto/src/filter/: id_filter.rs  tag_filter.rs
serf-proto/src/query/: response.rs
serf-proto/src/user_event/: message.rs  user_events.rs
serf/src/: agent.rs  async_std.rs  cli.rs  lib.rs  main.rs  smol.rs  tokio.rs
serf/src/agent/: error.rs  event_handler.rs  invoke.rs  ipc.rs  mdns.rs  options.rs
serf/src/agent/options/: builder.rs
serf/src/cli/: agent.rs  event.rs  force_leave.rs  info.rs  join.rs  keygen.rs  keys.rs  leave.rs  members.rs  monitor.rs  query.rs  reachability.rs  rtt.rs  tags.rs
serf/src/cli/agent/: args.rs  config.rs  event_handler.rs  invoke.rs
serf/test/: main.rs
serf/test/main/: net.rs
serf/test/main/net/: coordinates.rs  event.rs  get_queue_max.rs  local_member.rs  name_resolution.rs  num_nodes.rs  role.rs  set_tags.rs  state.rs  stats.rs  update.rs  update_tags.rs  write_keyring_file.rs
serf/test/main/net/delegate/: local_state.rs  nodemeta.rs  ping_delegate.rs  remote_state.rs
serf/test/main/net/event/: default_query.rs  event_user.rs  event_user_size_limit.rs  events_failed.rs  events_join.rs  events_leave.rs  events_leave_avoid_infinite_rebroadcast.rs  query.rs  query_deduplicate.rs  query_filter.rs  query_old_message.rs  query_params_encode_filters.rs  query_same_clock.rs  query_size_limit.rs  query_size_limit_increased.rs  remove_failed_events_leave.rs  should_process.rs  user_event_old_message.rs  user_event_same_clock.rs
serf/test/main/net/join/: intent_buffer_early.rs  intent_newer.rs  intent_old_message.rs  intent_reset_leaving.rs  join_cancel.rs  join_ignore_old.rs  join_leave.rs  join_leave_join.rs  leave_ltime.rs  pending_intent.rs  pending_intents.rs
serf/test/main/net/leave/: force_leave_failed.rs  force_leave_leaving.rs  force_leave_left.rs  intent_buffer_early.rs  intent_newer.rs  intent_old_message.rs  rejoin_different_role.rs  snapshot_recovery.rs
serf/test/main/net/reap/: handler.rs  handler_shutdown.rs  reap.rs
serf/test/main/net/reconnect/: reconnect.rs  same_ip.rs  timeout.rs
serf/test/main/net/remove/: failed_node.rs  failed_node_ourself.rs  failed_node_prune.rs
serf/test/main/net/snapshot/: snapshoter.rs  snapshoter_force_compact.rs  snapshoter_leave.rs  snapshoter_leave_rejoin.rs  snapshoter_recovery.rs
types/: Cargo.toml
types/src/: clock.rs  join.rs  lib.rs  member.rs  message.rs  push_pull.rs  version.rs
