[package]
name = "serf-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.serf-core]
path = "../serf-core"
features = ["arbitrary", "encryption"]

[[bin]]
name = "messages"
path = "fuzz_targets/messages.rs"
test = false
doc = false
bench = false
