[package]
name = "serf"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["tokio", "compression", "encryption", "dns", "tcp", "quic"]

tokio = ["memberlist/tokio"]
smol = ["memberlist/smol"]

serde = [
  "memberlist/serde",
  "serf-core/serde",
]

metrics = [
  "memberlist/metrics",
  "serf-core/metrics",
]

compression = []

encryption = ["memberlist/encryption", "serf-core/encryption"]

quic = ["memberlist/quic"]
quinn = ["memberlist/quinn", "quic"]

net = ["memberlist/net"]
tcp = ["memberlist/tcp", "net"]
tls = ["memberlist/tls", "net"]

# enable DNS node address resolver
dns = ["memberlist/dns"]
quic-ring = ["memberlist/quic-ring"]
quic-aws-lc-rs = ["memberlist/quic-aws-lc-rs"]
h3-ring = ["memberlist/h3-ring"]
h3-aws-lc-rs = ["memberlist/h3-aws-lc-rs"]
https-ring = ["memberlist/https-ring"]
https-aws-lc-rs = ["memberlist/https-aws-lc-rs"]
tls-ring = ["memberlist/tls-ring"]
tls-aws-lc-rs = ["memberlist/tls-aws-lc-rs"]
webpki-roots = ["memberlist/webpki-roots"]
rustls-platform-verifier = ["memberlist/rustls-platform-verifier"]
dnssec-ring = ["memberlist/dnssec-ring"]
dnssec-aws-lc-rs = ["memberlist/dnssec-aws-lc-rs"]

test = ["memberlist/test", "serf-core/test"]

[dependencies]
memberlist.workspace = true
serf-core = { workspace = true, default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
smol_str = "0.3"
paste = "1"

[[test]]
name = "main"
path = "test/main.rs"
required-features = ["test"]
