[package]
name = "toy-consul"
rust-version = "1.85.0"
edition = "2024"
publish = false

[dependencies]
bincode = "1"
clap = { version = "4", features = ["derive"] }
crossbeam-skiplist = "0.1"
serf = { workspace = true, features = ["default", "tokio", "tcp", "serde"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
scopeguard = "1"
